---
source: tests/files.rs
expression: visualization.result
---
@main(v0: float) {
.b1_:
  c2_: float = const 0;
  v3_: bool = feq v0 c2_;
  br v3_ .b4_ .b5_;
.b4_:
  print c2_;
  ret;
.b5_:
  v6_: bool = feq v0 v0;
  v7_: bool = const true;
  v8_: float = id v2_;
  v9_: bool = id v7_;
  br v6_ .v10_ .v11_;
.v10_:
  v12_: bool = flt v0 v2_;
  v13_: float = id v2_;
  br v12_ .v14_ .v15_;
.v15_:
  v16_: float = const 1;
  v17_: float = const 1.0000000001;
  v18_: float = const 0.9999999999;
  v19_: float = const 2;
  v20_: float = id v2_;
  v21_: float = id v16_;
  v22_: float = id v17_;
  v23_: float = id v18_;
  v24_: float = id v19_;
  v25_: float = id v20_;
  v26_: float = id v0;
.v27_:
  v28_: float = fdiv v26_ v22_;
  v29_: float = fadd v22_ v28_;
  v30_: float = fdiv v29_ v25_;
  v31_: float = fdiv v30_ v22_;
  v32_: bool = fge v31_ v24_;
  v33_: bool = fle v31_ v23_;
  v34_: bool = and v32_ v33_;
  v35_: bool = const true;
  v36_: float = id v21_;
  v37_: float = id v30_;
  v38_: bool = id v35_;
  v39_: float = id v23_;
  v40_: float = id v24_;
  v41_: float = id v25_;
  br v33_ .b42_ .b43_;
.b42_:
  c44_: bool = const false;
  v35_: float = id v20_;
  v36_: float = id v29_;
  v37_: bool = id c44_;
  v38_: float = id v22_;
  v39_: float = id v23_;
  v40_: float = id v24_;
  v41_: float = id v25_;
.b43_:
  v45_: bool = not v33_;
  v20_: float = id v20_;
  v21_: float = id v29_;
  v22_: float = id v22_;
  v23_: float = id v23_;
  v24_: float = id v24_;
  v25_: float = id v25_;
  br v45_ .b26_ .b46_;
.b46_:
  print v21_;
  v13_: float = id v20_;
.b14_:
  v8_: float = id v13_;
  v9_: bool = id v12_;
.b11_:
  br v9_ .b47_ .b48_;
.b47_:
  v49_: float = fdiv v8_ v8_;
  print v49_;
.b48_:
.b50_:
}
